--- a/Depth-First-Search/poj1526.md
+++ b/Depth-First-Search/poj1526.md
@@ -1,1 +1,1 @@
-<h1 align='center'><font color="blue"> Call Forwarding </font></h1>
+<h1 align='center'><font color='blue'> Call Forwarding </font></h1>
