--- a/Depth-First-Search/poj1526.md
+++ b/Depth-First-Search/poj1526.md
@@ -1,1 +1,15 @@
 <h1 align='center'><font color='blue'> Call Forwarding </font></h1>
+<table align='center'>
+	<tr>
+		<td><strong>Time Limit: </strong></td>
+		<td>1000MS</td>
+		<td><strong>Memory Limit: </strong></td>
+		<td>10000K</td>
+	</tr>
+	<tr>
+		<td><strong>Total Submissions: </strong></td>
+		<td>335</td>
+		<td><strong>Accepted: </strong></td>
+		<td>132</td>
+	</tr>
+</table>
