--- a/Depth-First-Search/poj 2386.md
+++ b/Depth-First-Search/poj 2386.md
@@ -1,4 +1,4 @@
-<h1><strong>Lake Counting</strong></h1>
+<h1 align='center'><strong>Lake Counting</strong></h1>
 
 ### **Description**
 Due to recent rains, water has pooled in various places in Farmer John's field, which is represented by a rectangle of N x M (1 <= N <= 100; 1 <= M <= 100) squares. Each square contains either water ('W') or dry land ('.'). Farmer John would like to figure out how many ponds have formed in his field. A pond is a connected set of squares with water in them, where a square is considered adjacent to all eight of its neighbors. 
