--- a/Depth-First-Search/poj 3126.md
+++ b/Depth-First-Search/poj 3126.md
@@ -1,4 +1,4 @@
-<h1><strong>Prime Path</strong></h1>
+<h1 align='center'><strong>Prime Path</strong></h1>
 
 ### **Description**
 The ministers of the cabinet were quite upset by the message from the Chief of Security stating that they would all have to change the four-digit room numbers on their offices. 
