--- a/Depth-First-Search/poj 3414.md
+++ b/Depth-First-Search/poj 3414.md
@@ -1,4 +1,4 @@
-<h1><strong>Pots</strong></h1>
+<h1 align='center'><strong>Pots</strong></h1>
 
 ### **Description**
 You are given two pots, having the volume of A and B liters respectively. The following operations can be performed:
