更新了6篇宽搜的部分内容

--- a/Depth-First-Search/poj 1107.md
+++ b/Depth-First-Search/poj 1107.md
@@ -40,8 +40,7 @@ the_quick_brown_fox_jumped_over_the_lazy_dog<br/>
 ajsbktcludmv<br/>
 
 ### **描述如下**
-
-
+每组字符串旋转ki个单位，然后取代原先字符串的位置，要求输出需要恢复原先字符串的位置
 
 ### **代码如下**
 
