--- a/Depth-First-Search/poj 1324.md
+++ b/Depth-First-Search/poj 1324.md
@@ -59,7 +59,7 @@ Case 2: -1
 In the above sample case, the head of Holedox can follows (4,1)->(5,1)->(5,2)->(5,3)->(4,3)->(4,2)->(4,1)->(3,1)->(2,1)->(1,1) to reach the square of exit with minimal number of step, which is nine. 
 
 ### **描述如下**
-
+贪吃蛇，给出蛇头，蛇身，障碍物和目的地的位置，求出蛇到达目的地所需要的最短路径
 
 ### **代码如下**
 
