--- a/Depth-First-Search/poj 1526.md
+++ b/Depth-First-Search/poj 1526.md
@@ -63,7 +63,7 @@ END OF OUTPUT</br>
 Mid-Atlantic 1996
 
 ### **描述如下**
-
+只可意会，不好描述，可以自行Google翻译
 
 ### **代码如下**
 ```
@@ -114,22 +114,8 @@ int Cresult(int number1, int number2, bool *&v)
 
 void calculate(int number1, int number2, bool *visit)
 {
-	//visit[number2] = true;
 	int cresult =  Cresult(number1, number2, visit);
-	//ostringstream str;
-
 	printf("AT %04d CALL TO %04d RINGS %.04d", number1, number2, cresult);
-	/*if (number1 / 1000 != 0)
-		str << "AT " << number1 << " CALL TO " << number2 << " RINGS " << cresult;
-	else if (number1 / 100 != 0)
-		str << "AT 0" << number1 << " CALL TO 0" << number2 << " RINGS " << cresult;
-	else if (number1 / 10 != 0)
-		str << "AT 00" << number1 << " CALL TO 00" << number2 << " RINGS " << cresult;
-	else if (number1 / 10 == 0)
-		str << "AT 000" << number1 << " CALL TO 000" << number2 << " RINGS " << cresult;
-		*/
-
-	//return str.str();
 }
 
 int main()
