--- a/Depth-First-Search/poj 1915.md
+++ b/Depth-First-Search/poj 1915.md
@@ -36,9 +36,9 @@ For each scenario of the input you have to calculate the minimal amount of knigh
 0<br/>
 
 ### **描述如下**
-
-
-
+在一个方形的盘面上，给定一个起始位置和终止位置，输出由起始位置到终止位置最少的步骤
+移动规则：参见图示
+输出需要注意的是按照字典序输出，这就要设置相应的方向顺序了
 ### **代码如下**
 
 ```
