--- a/Depth-First-Search/poj 2251.md
+++ b/Depth-First-Search/poj 2251.md
@@ -50,7 +50,8 @@ Escaped in 11 minute(s).<br/>
 Trapped!<br/>
 
 ### **题目描述**
-
+给一个三维地图，标上障碍物，入口和出口，给出达到出口的最短路径
+三维上和二维的题目区别不大，就是将方向数组设置成三维数组即可
 
 ### **代码如下**
 ```
